--- a/EmployeeManagement.API/appsettings.json
+++ b/EmployeeManagement.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=AV-9DXF7G3;Database=StaffDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
