--- a/PatientManagement.API/appsettings.json
+++ b/PatientManagement.API/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=AV-9DXF7G3;Database=PatientDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  }
 }
