staff service updated

--- a/EmployeeManagement.API/appsettings.json
+++ b/EmployeeManagement.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Server=AV-9DXF7G3;Database=StaffDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectionString": "Server=AV-9DXF7G3;Database=HAMSDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
