--- a/PatientManagement.API/appsettings.json
+++ b/PatientManagement.API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Server=AV-9DXF7G3;Database=PatientDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectionString": "Server=AV-9DXF7G3;Database=HAMSDB;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   }
 }
