--- a/PatientManagement.API/PatientManagement.API.csproj
+++ b/PatientManagement.API/PatientManagement.API.csproj
@@ -1,8 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\20220428091543_updated-patientappointtable.cs" />
+    <Compile Remove="Migrations\20220428091543_updated-patientappointtable.Designer.cs" />
+    <Compile Remove="Models\PatientAppointmentHistory.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
