--- a/APIGateway/appsettings.json
+++ b/APIGateway/appsettings.json
@@ -7,8 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ConnectionString": "Server=AV-9DXF7G3;Database=HAMS_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
-
+  "Routes": [],
+  "GlobalConfiguration": {
+    "BaseUrl" :  "https://localhost:5050"
   }
+
 }
